# JNIDemo20201117

./: .gitignore  1_mmm。.patch  build.gradle  calibrate.rar  constants.gradle  debug.keystore  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/szchoiceway/jnidemo20201117/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  c_extra.c  c_extra.h  classA.cpp  classA.h  classB.cpp  classB.h  classC.cpp  classC.h  extra-a.cpp  extra-a.h  extra.cpp  extra.h  native-lib.cpp
app/src/main/cpp_can_parse/: CMakeLists.txt  bmwParse.cpp  bmwParse.h  canCmd.cpp  canCmd.h
app/src/main/java/com/szchoiceway/jnidemo20201117/: Constant.java  JniTest.java  MainActivity.java  Person.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/szchoiceway/jnidemo20201117/: ExampleUnitTest.java
calibrate/: Android.mk  AndroidManifest.xml  build.gradle
calibrate/jni/calibrate/: Android.mk  CMakeLists.txt  ts_calibrate.cpp
calibrate/res/layout/: activity_main.xml  calibrate.xml
calibrate/res/layout-w853dp-land-hdpi/: calibrate.xml
calibrate/res/values/: strings.xml  styles.xml
calibrate/src/com/choiceway/calibrate/: CalibrateService.java  CalibrateView.java
gradle/wrapper/: gradle-wrapper.properties
